updated webeoc service ref, corrected potential schema lock issue when adding fields to existing tables/featureclasses

--- a/gbc.csproj
+++ b/gbc.csproj
@@ -151,9 +151,11 @@
     <Compile Include="Util\SDEUtil.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
     <None Include="Properties\DataSources\System.Data.DataTable.datasource" />
     <None Include="Service References\WebEOC7\api.wsdl" />
+    <None Include="Service References\WebEOC7\api1.wsdl" />
     <None Include="Service References\WebEOC7\gbc.WebEOC7.AddAttachmentResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
@@ -207,6 +209,9 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\WebEOC7\api1.disco" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
